tests/ui/public_step_name_import.stderr
error[E0432]: unresolved import `hibana::substrate::program::steps`
 --> tests/ui/public_step_name_import.rs:1:33
  |
1 | ...te::program::steps::StepNil;
  |                 ^^^^^ could not find `steps` in `program`
