tests/ui/public_step_name_import.rs
use hibana::substrate::program::steps::StepNil;

fn main() {
    let _ = core::mem::size_of::<StepNil>();
}
